2009-02-26  Tomas Mraz <t8m@centrum.cz>

	* xtests/Makefile.am: Add tst-pam_unix4.
	* xtests/tst-pam_unix4.c: New test for password change
        and shadow min days limit.
	* xtests/tst-pam_unix4.pamd: Likewise.
	* xtests/tst-pam_unix4.sh: Likewise.

	* modules/pam_unix/pam_unix_acct.c (pam_sm_acct_mgmt): Ignore
        PAM_AUTHTOK_ERR on shadow verification.
	* modules/pam_unix/passverify.c (check_shadow_expiry): Return
        PAM_AUTHTOK_ERR if sp_min limit for password change is defied.

2009-02-25  Thorsten Kukuk  <kukuk@thkukuk.de>

        * libpam/pam_misc.c (_pam_StrTok): Use unsigned char
        instead of int. Reported by Marcus Granado.
        * tests/Makefile.am (TESTS): Add tst-pam_mkargv.
        * tests/tst-pam_mkargv.c (main): Test case for
        _pam_mkargv.

2008-12-09  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 1.0.3

	* configure.in: ENABLE_NLS needs to be at the bottom of config.h

2008-11-25  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_time/pam_time.c (is_same): Fix check
	of correct string length (debian bug #326407).

2008-10-17  Tomas Mraz <t8m@centrum.cz> 

	* modules/pam_keyinit/pam_keyinit.c (kill_keyrings): Save the old
	euid to suid to be able to restore it.

2008-09-25  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_tally/pam_tally.c(get_tally): Fix syslog message.
	(tally_check): Open faillog read only. Close file descriptor.

2008-08-29  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 1.0.2

2008-08-29  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_loginuid/pam_loginuid.c(set_loginuid): Uids
	are unsigned.

2008-04-22  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_selinux/pam_selinux.c(pam_sm_close_sesion): Fix
	regression from the change from 2008-03-20. setexeccon() must be
	called also with NULL prev_context.

2008-04-16  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 1.0.1

	* configure.in: Bump version number
	* libpam/Makefile.am: Bump version number

2008-04-08  Tomas Mraz <t8m@centrum.cz>
